# meet-notes

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRISE_EN_MAIN.md  README.md  app.py  doc_extract.py  docker-compose.infra.yml  docker-compose.yml  docx_export.py  main.py  pdf_export.py  processor.py  pyproject.toml  summarize.py  transcribe.py
.streamlit/: config.toml
api/: main.py
api/routes/: documents.py  summarize.py  templates.py  transcribe.py
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/renderer/: app.js  index.html  styles.css
templates/: chantier.txt  commerciale.txt  direction.txt  securite.txt  socle_commun.txt  suivi_projet.txt
