[project]
name = "meet-notes-agent"
version = "1.0.0"
description = "Meeting notes agent — Gemini-powered transcription, diarization & summarization"
requires-python = ">=3.11"
dependencies = [
    "fpdf2>=2.7.0",
    "google-genai>=1.0.0",
    "pandas>=3.0.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
]
